--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bitsdojo_window: ^0.1.5
   
   flutter_local_notifications: ^13.0.0
+  fl_chart: ^0.60.0
 
 dev_dependencies:
   flutter_test:
