--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   
   flutter_local_notifications: ^13.0.0
   fl_chart: ^0.60.0
+  syncfusion_flutter_charts: ^20.4.49
 
 dev_dependencies:
   flutter_test:
